# gdlex-inspector

./: .gitignore  LICENSE  README.md  ROADMAP.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml
docs/: packaging.md
gdlex_inspector/: __init__.py  __main__.py  backend.py  categories.py  cli.py  gui.py  gui_charts.py  gui_theme.py  models.py  open_path.py  outlook_backup.py  platform_info.py  remote.py  report.py  risk.py  scan_profiles.py  scanner.py  system_profile.py  wol.py
packaging/debian/: control.in  gdlex-inspector
packaging/linux/: gdlex-inspector.desktop
scripts/: build_deb.sh  install_desktop_entry.sh  smoke_test.sh  uninstall_desktop_entry.sh
tests/: test_backend.py  test_categories.py  test_csv_report.py  test_debian_packaging.py  test_desktop_integration.py  test_gui_charts.py  test_gui_import.py  test_html_report.py  test_open_path.py  test_outlook_backup.py  test_platform_info.py  test_risk.py  test_scan_profiles.py  test_scanner.py  test_size_parse.py  test_smoke_cli.py  test_system_profile.py  test_wol.py
